[project]
name = "wut-counterfactual-explanations"
version = "0.1.0"
description = "Counterfactual Explanation in Allegro Pay — WUT Final Project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # --- Data & Core ---
    "pandas>=2.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    # --- Tree-based models ---
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    # --- Counterfactual Explanation packages ---
    "dice-ml>=0.11",
    "alibi>=0.9",
    # --- Evaluation & Interpretability ---
    "dalex>=1.7",
    "shap>=0.43",
    # --- Feature selection ---
    "boruta>=0.3",
    # --- Visualization ---
    "matplotlib>=3.7",
    "seaborn>=0.13",
    # --- Notebook environment ---
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "ipywidgets>=8.1",
    "kaggle>=2.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
